@@ -11,6 +11,9 @@ Evan Wright Shlomy Reinstein and Marcelo Vanzin for contributing to this
 release.
 
 {{{ Bug fixes
+- Fixed the file properties dialog when the VFS has no rename capability
+  (Matthieu Casanova)
+
 - Fixed an exception that prevent from opening properties dialog of non local
   files in the VFS Browser (#3199876 - Matthieu Casanova)
 
